# Vulkan-Engine

./: .gitignore  CMakeLists.txt  README.md  debug.sh  release.sh
include/: Application.hpp  DebugMessenger.hpp  Instance.hpp  Window.hpp  callbacks.hpp  types.hpp  utility.hpp  vulkan_functions.hpp
include/core/: EventHandler.hpp  Instance.hpp  Window.hpp  callbacks.hpp
include/maths/: Transform.hpp  geometry.hpp  mat4.hpp  quaternion.hpp  transforms.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector3.hpp
lib/vma/: vk_mem_alloc.cpp
src/: Application.cpp  DebugMessenger.cpp  Instance.cpp  Window.cpp  callbacks.cpp  main.cpp  vulkan_functions.cpp
src/assets/: Camera.cpp
src/core/: EventHandler.cpp  Instance.cpp  Window.cpp  callbacks.cpp
src/maths/: Transform.cpp  geometry.cpp  mat4.cpp  quaternion.cpp  transforms.cpp  trigonometry.cpp  vec2.cpp  vec3.cpp  vec4.cpp
